# build-an-ai-agent

./: .flake8  .gitignore  .pre-commit-config.yaml  .yamllint  404.html  AI_DIRECTIVES.md  CLAUDE.md  CONTEXT.md  GEMINI.md  LICENSE  README.md  WORKFLOW.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  search.html  sitemap.xml
.agent/rules/: ai_behavior.md
.github/workflows/: docs.yml  unittests.yml
00-foundations/: README.md
00-foundations/exercises/: README.md
01-runtime/: README.md
01-runtime/exercises/: README.md
02-channels/: README.md
02-channels/exercises/: README.md
03-memory/: README.md
03-memory/examples/openclaw/: README.md
03-memory/exercises/: README.md
04-rag/: README.md
04-rag/examples/from-scratch/: README.md
04-rag/exercises/: README.md
05-tools/: README.md
05-tools/exercises/: README.md
06-cron/: README.md
06-cron/exercises/: README.md
07-multi-agent/: README.md
07-multi-agent/exercises/: README.md
08-iac/: README.md
08-iac/configs/: README.md
08-iac/exercises/: README.md
09-production/: README.md
09-production/exercises/: README.md
AI_INSIGHTS/: index.html
docs/: AI_INSIGHTS.md  feature_template.md  index.md
feature_template/: index.html
search/: search_index.json
