[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "build-an-ai-agent"
version = "0.1.0"
description = "Production-grade AI Project"
authors = [{name = "West AI Labs", email = "labs@example.com"}]
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
]



# --- Black Configuration ---
[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | models
  | data
)/
'''

# --- Pytest Configuration ---
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    "src"
]
